# etl-cli

./: .generate_readme.py  .pre-commit-config.yaml  .tool-versions  FEEDBACK.md  PLANS  README.md  etl.py  pyproject.toml  test_etl.py
