[project]
name = "etl"
version = "0.1.0"
description = "A minimal extract-deduplicate-transform-load pipeline"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
etl = "etl:cli"

[tool.setuptools]
py-modules = ["etl"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
