[project]
name = "etl"
version = "0.1.0"
description = "A minimal extract-deduplicate-transform-load pipeline"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
etl = "etl:cli"

[tool.setuptools]
py-modules = ["etl"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific rules
    "D",      # pydocstyle
    "C4",     # flake8-comprehensions
    "PIE",    # flake8-pie
    "RET",    # flake8-return
    "PT",     # flake8-pytest-style
]
ignore = [
    "D100",   # missing docstring in public module (module docstring exists)
    "D104",   # missing docstring in public package
    "D203",   # no-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "D",      # no docstrings required in tests
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]
